--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
+
 <html>
 <title>Sample website</title>
 <head>
 Hello Webigte welcomes you
 </head>
+<body>
+<p>Toady is beautiful dau</p>
+</body>
 </html>
